--- a/LSFit/src/main/resources/templates/Create/CreateAluno.html
+++ b/LSFit/src/main/resources/templates/Create/CreateAluno.html
@@ -87,10 +87,17 @@
                 <input type="number" id="duracaoEmMeses" name="duracaoEmMeses" class="form-control" required>
             </div>
             <div class="form-group">
+                <label for="indicacaoId">Id do Aluno Indicador</label>
+                <input type="number" id="indicacaoId" name="indicacaoId" class="form-control" required>
+            </div>
+            <div class="form-group">
                 <label for="unidadeId">Id da Unidade:</label>
                 <input type="number" id="unidadeId" name="unidadeId" class="form-control" required>
             </div>
+            <div class="form-group d-flex justify-content-between">
             <button type="submit" class="btn btn-primary btn-block">Salvar</button>
+            <a href="/alunos" class="btn btn-secondary">Voltar para a Lista</a>
+            </div>
         </form>
     </main>
 
