--- a/LSFit/src/main/resources/templates/Create/CreateExercicio.html
+++ b/LSFit/src/main/resources/templates/Create/CreateExercicio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="bg-primary text-white p-3">
-        <h1 class="text-center">Criar Novo Exercício</h1>
+        <h1 class="text-center">Cadastro Exercício</h1>
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -71,7 +71,10 @@
                     </th:block>
                 </select>
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Salvar Exercício</button>
+            <div class="form-group d-flex justify-content-between">
+                <button type="submit" class="btn btn-primary">Salvar</button>
+                <a href="/exercicios" class="btn btn-secondary">Voltar para a Lista</a>
+            </div>
         </form>
     </main>
 
