--- a/LSFit/src/main/resources/templates/Create/CreateFichaDeExercicio.html
+++ b/LSFit/src/main/resources/templates/Create/CreateFichaDeExercicio.html
@@ -71,7 +71,7 @@
 
             <div class="form-group d-flex justify-content-between">
                 <button type="submit" class="btn btn-primary">Criar Ficha</button>
-                <a href="/ficha-exercicio/listar" class="btn btn-secondary">Voltar para a Lista</a>
+                <a href="/fichas" class="btn btn-secondary">Voltar para a Lista</a>
             </div>
         </form>
     </main>
