--- a/LSFit/src/main/resources/templates/Create/CreateGerente.html
+++ b/LSFit/src/main/resources/templates/Create/CreateGerente.html
@@ -89,7 +89,7 @@
 
             <div class="form-group d-flex justify-content-between">
                 <button type="submit" class="btn btn-primary">Salvar</button>
-                <a href="/gerente/listar" class="btn btn-secondary">Voltar para a Lista</a>
+                <a href="/gerentes" class="btn btn-secondary">Voltar para a Lista</a>
             </div>
         </form>
     </main>
