--- a/LSFit/src/main/resources/templates/Create/CreateUnidade.html
+++ b/LSFit/src/main/resources/templates/Create/CreateUnidade.html
@@ -77,7 +77,7 @@
 
             <div class="form-group d-flex justify-content-between">
                 <button type="submit" class="btn btn-primary">Salvar</button>
-                <a href="/unidade/listar" class="btn btn-secondary">Voltar para a Lista</a>
+                <a href="/unidades" class="btn btn-secondary">Voltar para a Lista</a>
             </div>
         </form>
     </main>
