--- a/LSFit/src/main/resources/templates/Read/ReadMaquinaExercicio.html
+++ b/LSFit/src/main/resources/templates/Read/ReadMaquinaExercicio.html
@@ -6,31 +6,33 @@
     <title>Lista de Máquinas e Exercícios - GymBD</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-
         body {
             display: flex;
             flex-direction: column;
             min-height: 100vh;
         }
-
-
         main {
             flex: 1;
         }
-
-
         footer {
             position: fixed;
             bottom: 0;
             width: 100%;
             text-align: center;
         }
+        .table-bordered {
+            border-radius: 10px;
+            overflow: hidden;
+        }
+        .add-button {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
 
 <header class="bg-primary text-white p-3">
-    <h1 class="text-center">Lista de Máquinas e Exercícios</h1>
+    <h1 class="text-center">Máquinas</h1>
 </header>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">LSFit</a>
@@ -86,14 +88,18 @@
                             <li th:each="exercicio : ${maquina.exercicios}" th:text="${exercicio.nomeExercicio}"></li>
                         </ul>
                     </td> 
-                    <td>
-                        <a class="btn btn-info" th:href="@{/maquina/deletar/{id}(id=${maquina.pkIdMaquina})}">Deletar</a>
-                        <a class="btn btn-info" th:href="@{/maquina/form/{id}(id=${maquina.pkIdMaquina})}">Atualizar</a>
+                    <td class="text-center align-middle">
+                        <div class="btn-group d-flex justify-content-center align-items-center" role="group">
+                            <a class="btn btn-danger mr-2 rounded" th:href="@{/maquina/deletar/{id}(id=${maquina.pkIdMaquina})}">Deletar</a>
+                            <a class="btn btn-info rounded" th:href="@{/maquina/form/{id}(id=${maquina.pkIdMaquina})}">Atualizar</a>
+                        </div>
                     </td>
                 </tr>
             </tbody>
         </table>
-        <a class="nav-link" href="/maquina/form">Criar Maquina</a>
+    </div>
+    <div class="add-button">
+        <a class="btn btn-success" href="/maquina/form">Criar Maquina</a>
     </div>
 </main>
 
