--- a/LSFit/src/main/resources/templates/Read/ReadPessoa.html
+++ b/LSFit/src/main/resources/templates/Read/ReadPessoa.html
@@ -6,24 +6,26 @@
     <title>Lista de Pessoas - GymBD</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-
         body {
             display: flex;
             flex-direction: column;
             min-height: 100vh;
         }
-
-
         main {
             flex: 1;
         }
-
-
         footer {
             position: fixed;
             bottom: 0;
             width: 100%;
             text-align: center;
+        }
+        .table-bordered {
+            border-radius: 10px;
+            overflow: hidden;
+        }
+        .add-button {
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -61,9 +63,18 @@
                     <td th:text="${pessoa.endereco.bairro}"></td> 
                     <td th:text="${pessoa.endereco.numero}"></td> 
                     <td th:text="${pessoa.endereco.cep}"></td> 
+                    <td class="text-center align-middle">
+                        <div class="btn-group d-flex justify-content-center align-items-center" role="group">
+                            <a class="btn btn-danger mr-2 rounded" th:href="@{/pessoa/deletar/{id}(id=${pessoa.pkIdPessoa})}">Deletar</a>
+                            <a class="btn btn-info rounded" th:href="@{/pessoa/form/{id}(id=${pessoa.pkIdPessoa})}">Atualizar</a>
+                        </div>
+                    </td>
                 </tr>
             </tbody>
         </table>
+    </div>
+    <div class="add-button">
+        <a class="btn btn-success" href="/pessoa/form">Criar Pessoa</a>
     </div>
 </main>
 
