--- a/LSFit/src/main/resources/templates/Update/UpdateAluno.html
+++ b/LSFit/src/main/resources/templates/Update/UpdateAluno.html
@@ -85,6 +85,10 @@
                 <input type="text" id="preco" name="preco" class="form-control" required>
             </div>
             <div class="form-group">
+                <label for="duracaoEmMeses">Duração (meses):</label>
+                <input type="number" id="duracaoEmMeses" name="duracaoEmMeses" class="form-control" required>
+            </div>
+            <div class="form-group">
                 <label for="unidadeId">Id da Unidade:</label>
                 <input type="number" id="unidadeId" name="unidadeId" class="form-control" required>
             </div>
