--- a/LSFit/src/main/resources/templates/Update/UpdateExercicio.html
+++ b/LSFit/src/main/resources/templates/Update/UpdateExercicio.html
@@ -45,10 +45,7 @@
 
     <main class="container mt-5">
         <form th:action="@{/exercicio/atualizar/{name}(name=${exercicio.nomeExercicio})}" method="post" class="bg-light p-4 rounded shadow">
-            <div class="form-group">
-                <label for="nomeExercicio">Nome do Exercício:</label>
-                <input type="text" id="nomeExercicio" name="nomeExercicio" class="form-control" required>
-            </div>
+            <h3>Informações do Exercício</h3>
             <div class="form-group">
                 <label for="series">Séries:</label>
                 <input type="number" id="series" name="series" class="form-control" required>
